# pdf_parser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  setup.py  test_mypy.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
examples/: mandiri_parser_example.py
pdfparser/: __init__.py  base.py  cli.py  factory.py  parser.py
tests/: conftest.py  test_parser.py
